# agent-config-sync-public

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HANDOFF.md  LICENSE  README.md  REPO_AUDIT.md  SECURITY.md  pyproject.toml
Lessons/: 00_Index.md  Lesson00_System_Overview.md  Lesson01_Render_Core.md  Lesson02_Allowlist_Config.md  Lesson03_Deterministic_Gates.md  Lesson04_Fsutil_State.md  Lesson05_Project_DriftGuard.md  Lesson06_Skills_Enroll.md  Lesson07_Capture.md  Lesson08_Promote.md  Lesson09_Settings_Hooks.md  Lesson10_CLI_Doctor.md  Lesson11_Operational_Hardening.md  Lesson12_Operator_Guide.md  Lesson13_Ambient_Watcher.md  Lesson14_MCP_Status_Server.md
_shared/: core.md
config/: targets.yaml
docs/: ARCHITECTURE.md  AUDIT_BRIEF.md  AUDIT_REMEDIATION_CHECKLIST.md  EVALUATION.md  INSTALLATION.md  KAGGLE_WRITEUP.md  LIMITATIONS.md  TRADEOFFS.md  TROUBLESHOOTING.md  USAGE.md  WORKING_CHECKLIST.md  implementation_plan.md  project_audit_report.md
examples/: sample_output.txt  sample_rule.md
hooks/: pre-commit  sessionstart-check
overlays/: claude.md  codex.md  gemini.md
references/: gemini-tools.md
scripts/: sense-watcher.ps1
tests/: conftest.py  test_audit.py  test_capture.py  test_check.py  test_cli.py  test_cli_e2e.py  test_config.py  test_config_sync_skill.py  test_discovery.py  test_doctor.py  test_enroll.py  test_fsutil.py  test_lock.py  test_mcp_server.py  test_neutralize.py  test_overlap.py  test_project.py  test_promote.py  test_render.py  test_runtime_docs.py  test_secrets.py  (+7 more)
(+55 files in other folders)
